--- a/capstone/static/css/scss/base.scss
+++ b/capstone/static/css/scss/base.scss
@@ -52,6 +52,10 @@ button, .btn, .btn:hover, .btn:active, .btn:focus {
   border: 0;
 }
 
+main {
+  padding-top: 90px;
+}
+
 .code-block {
   font-size: 0.65em;
   margin-top: -20px;
